--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,6 @@ nav_order:
   - Day 5
   - Assignments: assignments.md
   - Syllabus: syllabus.md
+just_the_docs:
+  stylesheets:
+    - assets/css/heading-number-light.css   
