--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,5 @@ nav_order:
   - Assignments: assignments.md
   - Syllabus: syllabus.md
 just_the_docs:
+  heading_numbers: true      # 모든 페이지 헤더에 자동 순번
 
