--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -12,7 +12,7 @@ jobs:
 
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: '3.2'
+          ruby-version: 3.2
           bundler-cache: true
 
       - run: gem install bundler && bundle install --jobs 4 --retry 3
