--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -15,8 +15,7 @@ jobs:
           ruby-version: 3.2
           bundler-cache: true
 
-      - run: gem install bundler && bundle install --jobs 4 --retry 3
-      - run: JEKYLL_ENV=production bundle exec jekyll build -d _site
+      - run: bundle exec jekyll build -d _site
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
