--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -13,9 +13,11 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
+          bundler: 'latest'
           bundler-cache: false        # 캐시 대신 우리가 직접 install
 
       - run: bundle install --jobs 4 --retry 3   # ←★ Gem 설치 단계
+      - run: bundle info just-the-docs || echo "just-the-docs gem not found"
       - run: bundle exec jekyll build -d _site   # ←★ 이제 Jekyll 실행 가능
 
       - name: Deploy to gh-pages
