--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -12,13 +12,10 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2'
-          bundler: 'latest'
-          bundler-cache: false        # 캐시 대신 우리가 직접 install
-
-      - run: bundle install --jobs 4 --retry 3   # ←★ Gem 설치 단계
-      - run: bundle info just-the-docs || echo "just-the-docs gem not found"
-      - run: bundle exec jekyll build -d _site   # ←★ 이제 Jekyll 실행 가능
+          ruby-version: 3.2
+          bundler-cache: true
+          
+      - run: bundle exec jekyll build -d _site
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
