--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,6 @@ nav_order:
   - Assignments: assignments.md
   - Syllabus: syllabus.md
 just_the_docs:
-  heading_numbers: true      # 모든 페이지 헤더에 자동 순번
+  heading_number: true      # 모든 페이지 헤더에 자동 순번
   heading_number_levels: 4
 
