--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,16 @@ nav_order:
   - Day 5
   - Assignments: assignments.md
   - Syllabus: syllabus.md
+
+<ul class="sidebar-nav">
+  {%- assign sorted = site.pages | sort: "nav_order" -%}
+  {%- for p in sorted -%}
+    {%- if p.nav_order <= 2 -%}
+      <li class="nav-item">
+        <a href="{{ p.url | relative_url }}" class="nav-link">
+          {{ p.title }}
+        </a>
+      </li>
+    {%- endif -%}
+  {%- endfor -%}
+</ul>
