--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "2025 HSHS basic of Bioinformation"
 description: "with Biopython"
-url: "https://suimaire111.github.io"
+url: "https://suimaire.github.io"
 
 remote_theme: pmarsceill/just-the-docs
 
