--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "2025 HSHS basic of Bioinformation"
+title: "2025 HSHS basic of Bioinformatics"
 description: "with Biopython"
 url: "https://suimaire.github.io"
 
